kub-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard
  namespace: kube-system
spec:
  rules:
  - host: k8s.encis.site
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
           service:
             name: kubernetes-dashboard
             port:
               number: 443
  tls:
  - hosts:
    - k8s.encis.site
    secretName: dashboard-ingress-cert
